@@ -154,6 +154,44 @@
   margin: -10px 0 1.5em;
 }
 
+/* ===== social media (facebook, twitter) ===== */
+
+.cnx_social_media iframe{
+  vertical-align: -.75em;
+}
+
+.cnx_facebook iframe{
+  width: 100px !important;
+  height: 21px !important;
+}
+
+.cnx_twitter iframe{
+  width: 96px !important;
+  height: 21px !important;
+}
+
+.cnx_twitter{
+  padding-right: .5em;
+  margin-right: .6em;
+  border-right: 1px solid #666;
+}
+
+#cnx_social_media_top .cnx_twitter, #cnx_social_media_top .cnx_facebook{
+  float: right;
+  margin-bottom: .5em;
+}
+
+#cnx_social_media_top .cnx_twitter{
+  padding-right: .8em;
+}
+
+#cnx_social_media_bottom{
+  text-align: right;
+  margin-top: 1em;
+  padding: 0;
+  float: right;
+}
+
 /* ========== some basic elements ========== */
 
 p{
