@@ -1,3 +1,6 @@
+RhaptosContent-0.57
+  - twitbook buttons
+
 RhaptosContent-0.56
   - Sprint-2011 bugfixes
 
